# sfdc-mcp-server

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: manual-verification.md
src/sfdc_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py  settings.py
tests/: test_auth.py  test_client.py  test_server.py  test_settings.py
tests/integration/: _fake_salesforce.py  _stdio_entry.py  conftest.py  test_stdio_roundtrip.py
